fix(404): remove extra padding on xs screens

--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -4,10 +4,13 @@
   @include section-content-padding;
   @include brown-gradient-background;
   @include stretch-section-to-viewport-height;
-  padding-top: 200px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+
+  @include screen-gt-xs {
+    padding-top: 200px;
+  }
 }
 
 .card {
